--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Projeto do jogo Pedra, Papel, Tesoura, Lagarto e Spock, criado por Sam Kass e Karen Bryla, construído em ReactJS."
     />
     <title>Rock, Paper, Scissors, Lizard and Spock</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet">
