--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Projeto do jogo Pedra, Papel, Tesoura, Lagarto e Spock, criado por Sam Kass e Karen Bryla, construído em ReactJS."
     />
-    <title>Rock, Paper, Scissors, Lizard and Spock</title>
+    <title>Pedra, Papel, Tesoura, Lagarto e Spock</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
